# 31/07/2020 - Should now pickup the local IP if it get set or changed after startup (web.py)
# 08/07/2020 - Might now return playing preset (web.py)
#              fsapi now returns playing streem for .name (web.py)
# 09/08/2020 - Added separate volumes for each daily alarm (Settings.py, alarmthread.py)
# 09/08/2020 - Added debug level via settings web page (web.py, settings.py)
# 13/08/2020 - Minor change to even cache timeout message in (Alarmgatherer.py)
# 25/08/2020 - Brightness tweaks (brightnessthread.py)
# 02/09/2020 - Added minimum volume level (Settings.py)
# 12/10/2020 - Shows Start and End time for Google Events (AlarmGatherer.py)
# 12/10/2020 - Finally fixed the alarm time change during holidays being missed (alarmthread.py)
# 18/10/2020 - Blanks the entire volume area to avoid leaving bits behind (tftthread.py)
# 18/10/2020 - Moved setting & adding to extra message into a function (tftthread.py)
# 18/10/2020 - Better way of restarting the player when the station fails using mediaplayer.restartPlayer() (AlarmThread.py, mediaPlayer.py)
# 02/11/2020 - Added proper volume percentage for api (web gui) and fsapi (web.py, settings.py)
#              Should keep volume and volumepercent in step rounding permitting
#              Home page of webserver updates every 10 seconds (player.html)
# 02/11/2020 - Made alarm volumes use the volumepercent routines (AlarmThread.py)
# 03/11/2020 - Changed default volume and volumepercent to minimum (Settings.py)
# 31/12/2020 - Fix for alarms failing to be set when there are no events (AlarmThread.py)
# 24/01/2021 - Actually call media.restartPlayer (AlarmThread.py)
# 26/01/2021 - Moved player monitoring to player Thread (tftthread.py, MediaPlayer.py)
#              Message creation & store moved to each thread (tftthread.py)
# 20/04/2021 - SetVolumePercent nolonger converts its parameter to a percentage as it already should be one (Settings.py)
# 27/04/2021 - Fixed volume reading and writing (Web.py)