@@ -95,7 +95,7 @@ table.volume {
 
 
 th, td {
-   bxorder: 1px solid black;
+   border: 0px solid black;
 }
 
 .centercell {
@@ -155,7 +155,7 @@ th, td {
         </TR>
         <TR><TD style="width:108px;height:20px;border: 1px solid black;padding:1px">
           <table style="border-collapse: collapse;padding:0px"><tr><TD>
-            <table class="brightnes" id="Brightnessbar" style="height:16px;width=100%;empty-cells: hide;border-collapse: collapse;;border-style:none;padding:0px">
+            <table class="brightnes" id="Brightnessbar" style="height:16px;width:100%;empty-cells: hide;border-collapse: collapse;;border-style:none;padding:0px">
                 <TR><TD>
                 <!-- table class="xbrightnes" id="xBrightnessbar" style="height:16px;border:none">
                     <TR><TD></TD></TR>
